--- a/04-cna-pas-springio-data/cna-pas-springio-data-migration-start/src/main/resources/application.properties
+++ b/04-cna-pas-springio-data/cna-pas-springio-data-migration-start/src/main/resources/application.properties
@@ -17,6 +17,7 @@
 # @author Michael Schaefer
 #
 
+logging.level.org.springframework.data=DEBUG
 
 flyway.locations=classpath:db/migration
 flyway.enabled=true
