--- a/04-cna-pas-springio-data/cna-pas-springio-data-start/manifest.yml
+++ b/04-cna-pas-springio-data/cna-pas-springio-data-start/manifest.yml
@@ -5,8 +5,7 @@ applications:
     path: target/cna-pas-springio-data-final-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
-    memory: 1G
+    memory: 512M
     health-check-type: http
     health-check-http-endpoint: /actuator/health
-    services:
-    - sql-mysql-cleardb
+  
