Add Session Communication

--- a/05-cna-pas-springio-ui/cna-pas-springio-ui-start/src/main/resources/application.properties
+++ b/05-cna-pas-springio-ui/cna-pas-springio-ui-start/src/main/resources/application.properties
@@ -7,3 +7,4 @@ management.endpoint.health.show-details=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
