--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/src/main/resources/application.properties
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+spring.application.name=flightService
+
 management.endpoints.enabled-by-default= true
 management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
-
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
