--- a/06-cna-pas-springio-communication/cna-pas-springio-asynchrone-flight-service-start/manifest.yml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-asynchrone-flight-service-start/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-  - name: routeService 
+  - name: flightService 
     random-route: true
-    path: target/cna-pas-springio-asynchrone-route-service-final-0.0.1-SNAPSHOT.jar
+    path: target/cna-pas-springio-asynchrone-flight-service-final-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
       SPRING_PROFILES_ACTIVE: cloud
@@ -11,6 +11,5 @@ applications:
     health-check-type: http
     health-check-http-endpoint: /actuator/health
     services:
-    - sql-mysql-cleardb
+    - sql-mysql-cleardb-flight
     - service-registry
-    - message-queue
