--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-route-service-start/manifest.yml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-route-service-start/manifest.yml
@@ -2,12 +2,13 @@
 applications:
   - name: routeService 
     random-route: true
-    path: target/cna-pas-springio-synchron-route-service-final-0.0.1-SNAPSHOT.jar
+    path: target/cna-pas-springio-synchron-route-service-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
       SPRING_PROFILES_ACTIVE: cloud
       JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
-    memory: 1G
+      JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {stack_threads: 50}]'
+    memory: 512M
     health-check-type: http
     health-check-http-endpoint: /actuator/health
     services:
