--- a/07-cna-pas-springio-gateway/cna-pas-springio-gateway-start/manifest.yml
+++ b/07-cna-pas-springio-gateway/cna-pas-springio-gateway-start/manifest.yml
@@ -1,16 +1,13 @@
 ---
 applications:
-  - name: flightService 
+  - name: aeroGateway
     random-route: true
-    path: target/cna-pas-springio-synchron-flight-service-final-0.0.1-SNAPSHOT.jar
+    path: target/cna-pas-springio-gateway-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
-      SPRING_PROFILES_ACTIVE: cloud
-      JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
       JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {stack_threads: 50}]'
-    memory: 512M
+    memory: 512M 
     health-check-type: http
     health-check-http-endpoint: /actuator/health
     services:
-    - sql-mysql-cleardb
     - service-registry
