--- a/09-cna-pas-springio-observability/cna-pas-springio-observability-gateway-final/manifest.yml
+++ b/09-cna-pas-springio-observability/cna-pas-springio-observability-gateway-final/manifest.yml
@@ -5,9 +5,8 @@ applications:
     path: target/cna-pas-springio-observability-gateway-final-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
-    memory: 1G 
-    disk_quota: 1G
-    instances: 1
+      JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {stack_threads: 50}]'
+    memory: 512M 
     health-check-type: http
     health-check-http-endpoint: /actuator/health
     services:
