--- a/11-cna-pas-springio-deployment/cna-pas-springio-deployment-route-service-start/src/main/resources/application.properties
+++ b/11-cna-pas-springio-deployment/cna-pas-springio-deployment-route-service-start/src/main/resources/application.properties
@@ -6,10 +6,10 @@ management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
 
 
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.platform=mysql
-#spring.datasource.initialization-mode=always
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 
 spring.cloud.loadbalancer.ribbon.enabled=false
 spring.cloud.loadbalancer.retry.enabled=true
