--- a/11-cna-pas-springio-deployment/cna-pas-springio-deployment-route-service-start/manifest.yml
+++ b/11-cna-pas-springio-deployment/cna-pas-springio-deployment-route-service-start/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-  - name: routeServiceGreen 
-    host: routeServiceGreenDeployment 
-    path: target/cna-pas-springio-deployment-route-service-final-0.0.1-SNAPSHOT.jar
+  - name: routeService???
+    host: routeService???
+    path: target/cna-pas-springio-deployment-route-service-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
       SPRING_PROFILES_ACTIVE: cloud
