--- a/03-cna-pas-springio-service/cna-pas-springio-service-start/manifest.yml
+++ b/03-cna-pas-springio-service/cna-pas-springio-service-start/manifest.yml
@@ -5,8 +5,7 @@ applications:
     path: target/cna-pas-springio-service-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
-    memory: 1G
+      JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {stack_threads: 50}]'
+    memory: 512M
     health-check-type: http
     health-check-http-endpoint: /actuator/health
-    services:
-    - autoscaler
