--- a/04-cna-pas-springio-data/cna-pas-springio-data-start/manifest.yml
+++ b/04-cna-pas-springio-data/cna-pas-springio-data-start/manifest.yml
@@ -2,10 +2,10 @@
 applications:
   - name: routeService 
     random-route: true
-    path: target/cna-pas-springio-data-final-0.0.1-SNAPSHOT.jar
+    path: target/cna-pas-springio-data-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
-    memory: 512M
+    memory: 1G
     health-check-type: http
     health-check-http-endpoint: /actuator/health
   
