--- a/06-cna-pas-springio-communication/cna-pas-springio-asynchrone-flight-service-start/manifest.yml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-asynchrone-flight-service-start/manifest.yml
@@ -11,5 +11,5 @@ applications:
     health-check-type: http
     health-check-http-endpoint: /actuator/health
     services:
-    - sql-mysql-cleardb-flight
+    - sql-mysql-cleardb
     - service-registry
