--- a/10-cna-pas-springio-security/cna-pas-springio-security-gateway-client-start/manifest.yml
+++ b/10-cna-pas-springio-security/cna-pas-springio-security-gateway-client-start/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
   - name: aeroSecurityGateway
-    host: aeroSecurityGatewayOrg1 
+    host: ????
     path: target/cna-pas-springio-security-gateway-client-start-0.0.1-SNAPSHOT.jar
     env:
       ROUTE_SERVICE_VERSION: 1
