--- a/04-cna-pas-springio-data/cna-pas-springio-data-final/pom.xml
+++ b/04-cna-pas-springio-data/cna-pas-springio-data-final/pom.xml
@@ -18,14 +18,14 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.2.0.RELEASE</version>
+				<version>2.7.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Hoxton.RELEASE</version>
+				<version>2021.0.4</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -45,15 +45,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-cloudfoundry-connector</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-spring-service-connector</artifactId>
-		</dependency>
 	</dependencies>
+
+	<!-- Dependencies of profile Pivotal Cloud Foundry (PCF) -->
+	<profiles>
+		<profile>
+			<id>pcf</id>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
