--- a/04-cna-pas-springio-data/cna-pas-springio-data-migration-final/src/main/resources/application.properties
+++ b/04-cna-pas-springio-data/cna-pas-springio-data-migration-final/src/main/resources/application.properties
@@ -17,7 +17,10 @@
 # @author Michael Schaefer
 #
 
+spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
 
-flyway.locations=classpath:db/migration
-flyway.enabled=true
-flyway.checkLocation=false
+spring.datasource.url=jdbc:mysql://localhost:3307/aircraft
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
