--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/pom.xml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/pom.xml
@@ -4,34 +4,32 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.thinkenterprise</groupId>
-	<artifactId>cna-pas-springio-synchron-flight-service-start</artifactId>
+	<artifactId>cna-pas-springio-synchron-flight-service-final</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>9</maven.compiler.source>
+		<maven.compiler.target>9</maven.compiler.target>
+		<java.version>9</java.version>
 	</properties>
+
+<!-- Default Profile which is activated for all stages like develop, integration or production -->
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.2.0.RELEASE</version>
+				<version>2.7.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Hoxton.RELEASE</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>io.pivotal.spring.cloud</groupId>
-				<artifactId>spring-cloud-services-dependencies</artifactId>
-				<version>3.1.1.RELEASE</version>
+				<version>2021.0.4</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -52,21 +50,60 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.pivotal.spring.cloud</groupId>
-			<artifactId>spring-cloud-services-starter-service-registry</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.11</version>
 		</dependency>
 	</dependencies>
+	
+	<profiles>
+		<!-- Product Profiles -->
+		<!-- Using Netflix Eureka a Discovery Client. Define a additional profile 
+			for Consul, or Zookeeper if you want -->
+		<profile>
+			<id>eureka</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<!-- Using MySQL as Database Driver -->
+		<profile>
+			<id>mysql</id>
+			<dependencies>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
 
+		<!-- Cloud Profiles -->		
+		<!-- Using Pivotal Cloud Foundry as Cloud Environment -->
+		<profile>
+			<id>pcf</id>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>io.pivotal.spring.cloud</groupId>
+						<artifactId>spring-cloud-services-dependencies</artifactId>
+						<version>3.5.0</version>
+						<type>pom</type>
+						<scope>import</scope>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+			<!-- Using Netflix Eureka a Discovery Client which is connected with the managed service from PCF  -->
+			<dependencies>
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-service-registry</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
