--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-route-service-final/src/main/resources/application.properties
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-route-service-final/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8082
+
 spring.application.name=routeService
 
 management.endpoints.enabled-by-default= true
@@ -5,12 +7,27 @@ management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:mysql://localhost:3307/aircraft
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.cloud.loadbalancer.ribbon.enabled=false
-spring.cloud.circuitbreaker.hystrix.enabled=false
+
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.initialInstanceInfoReplicationIntervalSeconds= 5
+eureka.client.registryFetchIntervalSeconds= 5
+eureka.instance.leaseRenewalIntervalInSeconds= 5
+eureka.instance.leaseExpirationDurationInSeconds= 5
+
+springdoc.packagesToScan=com.thinkenterprise.route.api
+springdoc.swagger-ui.path=/oas/v3/ui
+springdoc.api-docs.path=/oas/v3/spec
+springdoc.api-docs.enabled=true
+
+
+
+#spring.cloud.loadbalancer.ribbon.enabled=false
+#spring.cloud.    circuitbreaker.hystrix.enabled=false
 spring.cloud.loadbalancer.retry.enabled=true
-spring.main.allow-bean-definition-overriding=true
+#spring.main.allow-bean-definition-overriding=true
