--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/pom.xml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-start/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.thinkenterprise</groupId>
-	<artifactId>cna-pas-springio-synchron-flight-service-final</artifactId>
+	<artifactId>cna-pas-springio-synchron-flight-service-start</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -58,17 +58,7 @@
 	
 	<profiles>
 		<!-- Product Profiles -->
-		<!-- Using Netflix Eureka a Discovery Client. Define a additional profile 
-			for Consul, or Zookeeper if you want -->
-		<profile>
-			<id>eureka</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.springframework.cloud</groupId>
-					<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-				</dependency>
-			</dependencies>
-		</profile>
+
 		<!-- Using MySQL as Database Driver -->
 		<profile>
 			<id>mysql</id>
@@ -79,6 +69,17 @@
 				</dependency>
 			</dependencies>
 		</profile>
+		
+		<!-- Using H2 as Database Driver -->
+		<profile>
+			<id>h2</id>
+			<dependencies>
+				<dependency>
+			        <groupId>com.h2database</groupId>
+			        <artifactId>h2</artifactId>
+		       </dependency>
+			</dependencies>
+		</profile>	
 
 		<!-- Cloud Profiles -->		
 		<!-- Using Pivotal Cloud Foundry as Cloud Environment -->
