--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-final/pom.xml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-final/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.thinkenterprise</groupId>
@@ -50,6 +48,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -94,11 +96,24 @@
 			<id>h2</id>
 			<dependencies>
 				<dependency>
-			        <groupId>com.h2database</groupId>
-			        <artifactId>h2</artifactId>
-		       </dependency>
+					<groupId>com.h2database</groupId>
+					<artifactId>h2</artifactId>
+				</dependency>
 			</dependencies>
-		</profile>	
+		</profile>
+
+		<!-- Using Chaos Monkey Tests-->
+		<profile>
+			<id>chaos</id>
+			<dependencies>
+				<dependency>
+					<groupId>de.codecentric</groupId>
+					<artifactId>chaos-monkey-spring-boot</artifactId>
+					<version>2.6.1</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
 		<!-- Cloud Profiles -->
 		<!-- Using Pivotal Cloud Foundry as Cloud Environment -->
 		<profile>
@@ -147,29 +162,25 @@
 				</configuration>
 			</plugin>
 			<plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>build-helper-maven-plugin</artifactId>
-    <executions>
-        <execution>
-            <id>add-source</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-                <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-                <sources>
-                    <source>${project.build.directory}/generated-test-sources/contracts/</source>
-                </sources>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
-			
-			
-			
-			
-			
-			
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/generated-test-sources/contracts/</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
