Add chaos monkey metric endpoint

--- a/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-final/src/main/resources/application.yaml
+++ b/06-cna-pas-springio-communication/cna-pas-springio-synchrone-flight-service-final/src/main/resources/application.yaml
@@ -30,6 +30,10 @@ management:
   endpoint:
     health:
       show-details: always
+    chaosmonkey:
+      enabled: true
+    chaosmonkeyjmx:
+      enabled: true
 
 ## Open API Settings     
 springdoc:
